<resources>
    <string name="app_name">TODO</string>
    <string name="dialog_tips">提示</string>
    <string name="dialog_confirm">确定</string>
    <string name="dialog_cancel">取消</string>

    <!--登录-->
    <string name="login_username">用户名</string>
    <string name="login_password">密码</string>
    <string name="login_register">注册</string>
    <string name="login_text">登录</string>
    <string name="login_success">登录成功</string>
    <string name="login_expired">登录过期，请重新登录</string>

    <!--注册-->
    <string name="register_username">请输入用户名</string>
    <string name="register_password">请输入密码</string>
    <string name="register_repassword">请再次输入密码</string>
    <string name="password_different">两次输入的密码不一致，请重新输入!</string>
    <string name="dialog_register_success">注册成功</string>

    <!--主页面-->
    <string name="main_alert_back">再按一次退出程序</string>
    <string name="main_title_todo">待办清单</string>
    <string name="main_title_done">已完成清单</string>
    <string name="main_title_setting">设置</string>
    <string name="menu_title_add">新增清单</string>
    <string name="confirm_delete_todo">确定删除该条清单?</string>
    <string name="delete_todo_success">删除清单成功</string>
    <string name="delete_todo_failed">删除清单失败</string>
    <string name="confirm_update_todo_status">确定更新该条清单状态?</string>
    <string name="update_todo_status_success">更新清单状态成功</string>
    <string name="update_todo_status_failed">更新清单状态失败</string>

    <!-- 新增Todo -->
    <string name="add_todo_title">添加待办清单</string>
    <string name="add_todo_title_hint">请输入待办清单标题</string>
    <string name="add_todo_content_hint">请输入待办清单内容（非必填）</string>
    <string name="add_todo_submit">保存</string>
    <string name="add_todo_success">添加待办清单成功</string>
    <string name="add_todo_failed">添加待办清单失败</string>

    <!-- Todo详情 -->
    <string name="todo_detail_title">清单详情</string>
    <string name="update_todo_success">更新清单成功</string>
    <string name="update_todo_failed">更新清单失败</string>
    <string name="menu_title_edit">编辑清单</string>

    <!-- 设置 -->
    <string name="setting_title_nightmode">切换日/夜间模式</string>
    <string name="setting_title_github">项目主页</string>
    <string name="setting_title_about">关于</string>
    <string name="setting_title_logout">退出登录</string>
    <string name="confirm_logout">确定退出当前账号?</string>

    <!-- 网络请求 -->
    <string name="no_network_connection">网络连接不可用,请检查网络设置・・・</string>
    <string name="request_error">"网络连接超时,请稍后再试・・・"</string>
</resources>
