<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:rv="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/layout_toolbar"
        android:visibility="gone" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_100">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_username"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="@dimen/sp_16" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="@dimen/sp_16" />

    </android.support.design.widget.TextInputLayout>

    <com.flyco.roundview.RoundTextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_40"
        android:gravity="center"
        android:padding="@dimen/dp_10"
        android:text="@string/login_text"
        android:textColor="@color/color_widget"
        android:textSize="@dimen/sp_16"
        rv:rv_backgroundColor="@color/color_main"
        rv:rv_cornerRadius="@dimen/dp_5"
        rv:rv_isRippleEnable="true" />

    <TextView
        android:id="@+id/tv_register"
        style="@style/TextviewDefault"
        android:layout_alignParentRight="true"
        android:layout_gravity="right"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_15"
        android:text="@string/login_register"
        android:textColor="@color/color_main"
        android:textSize="@dimen/sp_16" />

</LinearLayout>