<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:rv="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <com.zk.wanandroidtodo.widgets.ContainsEmojiEditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:drawableLeft="@mipmap/ic_title"
        android:drawablePadding="@dimen/dp_5"
        android:enabled="false"
        android:hint="@string/add_todo_title_hint"
        android:padding="@dimen/dp_10"
        android:singleLine="true"
        android:textSize="@dimen/sp_16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/color_divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:padding="@dimen/dp_10">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_content" />

        <com.zk.wanandroidtodo.widgets.ContainsEmojiEditText
            android:id="@+id/et_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_5"
            android:background="@null"
            android:enabled="false"
            android:hint="@string/add_todo_content_hint"
            android:textSize="@dimen/sp_16" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/color_divider" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/ic_date"
        android:drawablePadding="@dimen/dp_5"
        android:enabled="false"
        android:padding="@dimen/dp_10"
        android:textSize="@dimen/sp_16"
        tools:text="2018-08-16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/color_divider" />

    <com.flyco.roundview.RoundTextView
        android:id="@+id/tv_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_40"
        android:gravity="center"
        android:padding="@dimen/dp_10"
        android:text="@string/add_todo_submit"
        android:textColor="@color/color_widget"
        android:textSize="@dimen/sp_16"
        android:visibility="gone"
        rv:rv_backgroundColor="@color/color_main"
        rv:rv_cornerRadius="@dimen/dp_5"
        rv:rv_isRippleEnable="true" />

</LinearLayout>